# HDT-agentic-interop

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  RELEASE_NOTES.md  Sources.txt  add-coveragerc-ci.gitpatch  conftest.py  docs-update-what-hdt-knows.gitpatch  guardian-agent-v2.patch  guardian-agent.patch  openapi.yaml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  validation.py
HDT_API/: __init__.py  app.py  auth.py  config_loader.py  hdt_api.py  hdt_api_fetchers.py  hdt_api_utils.py  http.py  openapi_spec.py  users_store.py
HDT_CORE_INFRASTRUCTURE/: GAMEBUS_WALK_fetch.py  GAMEBUS_WALK_parse.py  GOOGLE_FIT_WALK_parse.py  HDT_API.py  _DEL_HDT_API.py  __init__.py  auth.py  hdt_api_fetchers.py  test_validation.py  validation.py
HDT_MCP/: _DEL_server.py  __init__.py  constants.py  gateway.py  hdt_api.py  mcp_app.py  mcp_governor.py  mcp_resources.py  mcp_tools.py  policy_engine.py  policy_runtime.py  registry.json  server.py  server_helpers.py  server_option_d.py  sources_mcp_client.py  test_http_headers.py  test_observability.py  test_openapi.py  test_policy.py  test_policy_observability.py  test_vault.py  test_vault_retention.py  vault.py
HDT_SOURCES_MCP/: server.py
Virtual_Twin_Models/: HDT_DIABETES_model.py
config/: external_parties.json  mcp.json  policy.guardian_demo.json  policy.json  policy_ieee_demo.json  settings.py  user_permissions.json  users.json
data/: hdt_vault.sqlite  hdt_vault.sqlite# switch to DuckDB later  lifepod.duckdb
docs/: ARTIFACTS_APPENDIX.md  DEMO.md
hdt_common/: telemetry.py  tooling.py
hdt_core_infrastructure/: GAMEBUS_DIABETES_fetch.py  GAMEBUS_WALK_fetch.py  GOOGLE_FIT_WALK_fetch.py
hdt_mcp/: gateway.py  mcp_governor.py  sources_mcp_client.py  vault_store.py
hdt_sources_mcp/: __init__.py  server.py
openapi/: components.yaml  openapi.json  openapi.yaml
scripts/: demo_coaching_agent_suspicious.py  demo_end_to_end.py  demo_guardian_agent.py  demo_hdt_roundtrip.py  demo_ieee_all.ps1  demo_ieee_all.sh  demo_ieee_policy_matrix.py  demo_ieee_privacy.py  demo_ieee_transparency.py  demo_option_d_walk.py  demo_quickstart.ps1  demo_quickstart.sh  demo_smoke_mcp.py  demo_transparency_what_hdt_knows.py  demo_walk.py  init_sample_config.py  init_sample_vault.py  inspect_external_mcp.ps1  inspect_external_mcp.sh  inspect_sources_mcp.ps1  inspect_sources_mcp.sh  pytest_quick.py  smoke_api.ps1  smoke_api.py  smoke_api.sh  smoke_mcp.py  test_sources_direct.py
tests/: _DEL_test_etag.py  _DEL_test_etag_walk.py  _DEL_test_http_headers.py  conftest.py  test_adapters.py  test_api_time_window_behavior.py  test_api_walk_adapter.py  test_api_walk_adapter_variants.py  test_behavior.py  test_behavior_helpers.py  test_domain_sync.py  test_etag_walk.py  test_governor.py  test_hdt_api_utils.py  test_hdt_mcp_option_d.py  test_hdt_mcp_option_d_diabetes.py  test_http_headers.py  test_observability.py  test_openapi.py  test_policy.py  test_server_helpers.py  (+13 more)
(+104 files in other folders)
