[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdt-agentic-interop"
version = "0.5.0"
description = "Interoperable HDT prototype with MCP façade, vault, policy lanes, and telemetry."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Olga Glazunova", email = "o.glazunova@tue.nl" }]
keywords = ["Model Context Protocol", "HDT", "interoperability", "digital health", "agentic systems"]

dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "python-dotenv",
  "requests",
  "mcp>=1.24,<2",
]

[project.urls]
Homepage = "https://github.com/oaglazunova/HDT-agentic-interop"
Repository = "https://github.com/oaglazunova/HDT-agentic-interop"
Issues = "https://github.com/oaglazunova/HDT-agentic-interop/issues"

# Optional convenience script (adjust the module path if your server file differs)
[project.scripts]
hdt-mcp = "hdt_mcp.gateway:main"
hdt-sources = "hdt_sources_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "integration: integration tests (opt-in; run with --run-integration)",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "hdt_mcp*",
  "hdt_sources_mcp*",
  "hdt_core_infrastructure*",
  "config*",
]
exclude = [
  "data*",
  "Virtual_Twin_Models*",
  "docs*",
  "scripts*",
  "tests*",
]




